Implement global wallet Closes #12
